* Fix struct to use json tags for clarity and best practice such as request can be made passing category_name instead of name * Add tearDown function for test * Fix test functions organisation - move init to helper.go * Add test for Category POST request
